Summary of important user-visible changes for releases of the control package

===============================================================================
control-2.3.52   Release Date: 2012-06-25   Release Manager: Lukas Reichlin
===============================================================================

** Fixed a silly mistake in MIMO transfer function to state-space conversion.
   The bug has been introduced with control-2.3.51.
   (Thanks to Jim Rawlings for providing the test case)

** dlqe, lqe
   Added new functions for linear quadratic estimators.
   (Thanks to Megan Zagrobelny)

** Upon request of the Debian maintainers, the tex-files  control.tex  and
   functions.texi  for generating  control.pdf  are included in the doc folder,
   next to  control.pdf.  Note that  functions.texi  is generated automatically
   by the scripts in the control/devel folder and the package generate_html.
   They are not included in the control package and can be found on the
   OctaveForge SVN server.

** Minor improvements in various help texts.


===============================================================================
control-2.3.51   Release Date: 2012-06-03   Release Manager: Lukas Reichlin
===============================================================================

** filt, filtdata, tf
   -- Added function "filt" to specify disrete-time transfer functions in DSP
      format, i.e. z^-1.
   -- Added function "filtdata" to return any type of discrete-time LTI model
      in DSP format.
   -- tf models have a new property "inv".  To display a discrete-time TF sys
      in z^-1, set  sys.inv=true.  In order to switch to z, set  sys.inv=false.
      "filt" sets property "inv" to true (z^-1) by default, while "tf" uses
      false (z) as default value.
      
** ctranspose
   Conjugate transpose or pertransposition of LTI objects.
   Used by Octave for "sys'".  For a transfer-function matrix G, G' denotes the