@@ -1,6 +1,16 @@
 Summary of important user-visible changes for releases of the control package
 
 ===============================================================================
+control-2.3.53   Release Date: 2012-xx-yy   Release Manager: Lukas Reichlin
+===============================================================================
+
+** feedback
+   Fixed an argument check which caused false positive error messages.
+   It was a copy-paste mistake affecting non-square systems.
+   (Thanks to Tony Olivo)
+
+
+===============================================================================
 control-2.3.52   Release Date: 2012-06-25   Release Manager: Lukas Reichlin
 ===============================================================================
 
